# WaveTableTools

./: .appveyor.yml  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
examples/: CreateTables.sh
examples/futur3soundz/: CreateTables.sh  LICENSE.md
sources/: Expr.cpp  Expr.h  ExprGrammar.l  ExprGrammar.tab.cpp  ExprGrammar.tab.h  ExprGrammar.y  ExprGrammar.yy.cpp  ExprGrammar.yy.h  Random.cpp  Random.h  WCreate.cpp  WMorph.cpp  WaveFormula.cpp  WaveFormula.h  Wavetable.cpp  Wavetable.h
sources/interactive/: WCreate.cpp  WEdit.cpp
sources/interactive/dsp/: Buffer.h  Config.h  Interpolators.hpp  MathHelpers.h  Wavetables.cpp  Wavetables.h
sources/random/: ms_stl_random.h
sources/series/: SeriesExpr.cpp  SeriesExpr.h  SeriesExprGrammar.l  SeriesExprGrammar.tab.cpp  SeriesExprGrammar.tab.h  SeriesExprGrammar.y  SeriesExprGrammar.yy.cpp  SeriesExprGrammar.yy.h  SeriesExprGrammarExtra.h
sources/utility/: Locale.h  unicodefile.c  unicodefile.h  utf8main.c
